# airflow-repo-template

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
dags/: example_dag.py
docs/: README.md
tests/: test_dags.py
