[project]
name = "airflow-repo-template"
version = "0.1.0"
description = "Simple Airflow 3 development template"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==3.1.5",
    "apache-airflow-providers-standard>=1.0.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.8.0"]

[tool.ruff.lint]
extend-select = ["AIR"]
